Yeni fotoğraf eklendi

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 
   <h1>Hakkımda</h1>
 
-  <img src="vesikalığım.jpg" alt="Benim fotoğrafım" width="200">
+  <img src="kediliben2.jpg" alt="Benim fotoğrafım" width="200">
 
   <p>Merhaba! Ben Berra, Bilgisayar Mühendisliği 3. Sınıf öğrencisiyim. 
     Kod yazmayı, yeni şeyler öğrenmeyi, müzik dinlemeyi ve teknoloji alanındaki gelişmeleri takip etmeyi çok severim  💻☕🎶</p>
